Update token hard coding